--- a/.storybook/Dockerfile
+++ b/.storybook/Dockerfile
@@ -3,7 +3,7 @@ FROM mhart/alpine-node:12 AS builder
 ARG NODE_ENV
 ENV NODE_ENV ${NODE_ENV:-'production'}
 
-WORKDIR /app
+WORKDIR /storybook
 
 COPY package.json .
 COPY yarn.lock .
