--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"react",
 		"client",
 		"graphql",
-    "typescript",
+		"typescript",
 		"apollo",
 		"ssr",
 		"masks"
@@ -52,6 +52,7 @@
 		"apollo-link-http": "1.5.17",
 		"apollo-link-schema": "1.2.5",
 		"apollo-utilities": "1.3.4",
+		"bufferutil": "^4.0.1",
 		"formik": "2.1.5",
 		"graphql": "15.3.0",
 		"graphql-tag": "2.11.0",
