--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@apollo/react-common": "3.1.4",
 		"@apollo/react-components": "4.0.0",
 		"@apollo/react-hooks": "4.0.0",
+		"@svgr/webpack": "^5.4.0",
 		"apisauce": "1.1.2",
 		"apollo-cache": "1.3.5",
 		"apollo-cache-inmemory": "1.6.6",
@@ -60,6 +61,8 @@
 		"next": "9.5.1",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
+		"react-hook-form": "^6.8.4",
+		"react-native-svg": "^12.1.0",
 		"react-styled-flexboxgrid": "3.2.1",
 		"styled-components": "5.1.1"
 	},
