--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@apollo/react-components": "4.0.0",
 		"@apollo/react-hooks": "4.0.0",
 		"@svgr/webpack": "^5.4.0",
+		"@types/uuid": "^8.3.0",
 		"apisauce": "1.1.2",
 		"apollo-cache": "1.3.5",
 		"apollo-cache-inmemory": "1.6.6",
@@ -58,13 +59,17 @@
 		"graphql": "15.3.0",
 		"graphql-tag": "2.11.0",
 		"graphql-tools": "6.1.0",
+		"i18next": "^19.7.0",
 		"next": "9.5.1",
+		"next-i18next": "^6.0.2",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
-		"react-hook-form": "^6.8.4",
+		"react-hook-form": "^6.8.5",
 		"react-native-svg": "^12.1.0",
 		"react-styled-flexboxgrid": "3.2.1",
-		"styled-components": "5.1.1"
+		"react-svg": "^11.0.40",
+		"styled-components": "5.1.1",
+		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.11.1",
