--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
 		"@apollo/react-components": "4.0.0",
 		"@apollo/react-hooks": "4.0.0",
 		"@svgr/webpack": "^5.4.0",
+		"@types/next": "^9.0.0",
 		"@types/uuid": "^8.3.0",
+		"antd": "^4.7.0",
 		"apisauce": "1.1.2",
 		"apollo-cache": "1.3.5",
 		"apollo-cache-inmemory": "1.6.6",
@@ -65,6 +67,7 @@
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-hook-form": "^6.8.5",
+		"react-i18next": "^11.7.3",
 		"react-native-svg": "^12.1.0",
 		"react-styled-flexboxgrid": "3.2.1",
 		"react-svg": "^11.0.40",
@@ -86,6 +89,7 @@
 		"@storybook/addon-essentials": "6.0.10",
 		"@storybook/addon-links": "6.0.10",
 		"@storybook/react": "6.0.10",
+		"@types/i18n": "^0.8.7",
 		"@types/node": "14.0.27",
 		"@types/react": "16.9.46",
 		"@types/react-dom": "16.9.8",
