--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
 		"apollo-cache-inmemory": "1.6.6",
 		"apollo-client": "2.6.10",
 		"apollo-link": "1.2.14",
-		"apollo-link-http": "1.5.17",
 		"apollo-link-schema": "1.2.5",
 		"apollo-utilities": "1.3.4",
 		"bufferutil": "^4.0.1",
@@ -62,6 +61,7 @@
 		"graphql-tag": "2.11.0",
 		"graphql-tools": "6.1.0",
 		"i18next": "^19.7.0",
+		"lodash": "^4.17.20",
 		"next": "9.5.1",
 		"next-i18next": "^6.0.2",
 		"react": "16.13.1",
@@ -88,6 +88,7 @@
 		"@storybook/addon-essentials": "6.0.10",
 		"@storybook/addon-links": "6.0.10",
 		"@storybook/react": "6.0.10",
+		"@types/lodash": "^4.14.162",
 		"@types/node": "14.0.27",
 		"@types/react": "16.9.46",
 		"@types/react-dom": "16.9.8",
