--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 ## code changes will send PR to following users
-* @option1-sergeimelnik1980 @option1-lossless1 @lossless1
+* @sergeimelnik1980 @lossless1 @hameltomor
